...
    switch (this) {
      case PerformanceRating.normal:
        return 'Normal';
      case PerformanceRating.fair:
        return 'Fair';
      case PerformanceRating.good:
        return 'Good';
      case PerformanceRating.excellent:
        return 'Excellent';
      case PerformanceRating.legendary:
        return 'Legendary';
    }
  }
...
